[UI] Fix table alignment to be correctly oriented, need to make table bigger

--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ table {
 
 #camera--trigger {
     position:absolute;
-    padding: 20px 50px 0px 50px;
+    padding: 0px 50px 0px 50px;
     background-color: rgba(79,79,79,0.7);
     border: 1px solid white;
     border-radius: 5%;
